--- a/public/test.html
+++ b/public/test.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar seperate">
+        <nav class="navbar seperate center-text">
             <div class="elements-prod-3">
                 <a class="heading-1">Tech Blog</a>
                 <a class="title-3">Dashboard</a>
