--- a/public/test.html
+++ b/public/test.html
@@ -10,14 +10,17 @@
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar seperate center-text">
+    <header class="prod-2">
+        <div class="container seperate elements-prod-1">
+            <div class="heading-1">The Tech Blog</div>
+            <a class="title-3">Logout</a>
+        </div>
+        <nav class="navbar center-text">
             <div class="elements-prod-3">
-                <a class="heading-1">Tech Blog</a>
+                <a class="title-3">Home</a>
                 <a class="title-3">Dashboard</a>
             </div>
             <div class="elements-prod-3">
-                <a class="title-3">Logout</a>
             </div>
         </nav>
     </header>
