--- a/public/test.html
+++ b/public/test.html
@@ -15,12 +15,10 @@
             <div class="heading-1">The Tech Blog</div>
             <a class="title-3">Logout</a>
         </div>
-        <nav class="navbar center-text">
+        <nav class="navbar center-text title-3">
             <div class="elements-prod-3">
-                <a class="title-3">Home</a>
-                <a class="title-3">Dashboard</a>
-            </div>
-            <div class="elements-prod-3">
+                <a>Home</a>
+                <a>Dashboard</a>
             </div>
         </nav>
     </header>
