--- a/public/test.html
+++ b/public/test.html
@@ -13,7 +13,7 @@
     <header class="prod-2">
         <div class="container seperate elements-prod-1">
             <div class="heading-1">The Tech Blog</div>
-            <a class="title-3">Logout</a>
+            <a class="title-3 log-btn">Logout</a>
         </div>
         <nav class="navbar center-text title-3">
             <div class="elements-prod-3">
