--- a/public/test.html
+++ b/public/test.html
@@ -22,5 +22,16 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div>
+            <form>
+                <label for="username-input">Username</label>
+                <input type="text" id="username-input" placeholder="Username" required />
+                <label for="password-input">Password</label>
+                <input type="password" id='password-input' placeholder="Password" required />
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </main>
 </body>
 </html>
