Switched labels to aria labels

--- a/public/test.html
+++ b/public/test.html
@@ -25,10 +25,8 @@
     <main>
         <div>
             <form>
-                <label for="username-input">Username</label>
-                <input type="text" id="username-input" placeholder="Username" required />
-                <label for="password-input">Password</label>
-                <input type="password" id='password-input' placeholder="Password" required />
+                <input type="text" id="username-input" placeholder="Username" aria-label="Input username" required />
+                <input type="password" id='password-input' placeholder="Password" aria-label="Input password" required />
                 <button type="submit">Login</button>
             </form>
         </div>
