Formatted login page

--- a/public/test.html
+++ b/public/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://kwlucas.github.io/Slate/css/core.css" />
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
 </head>
+
 <body>
     <header class="prod-2">
         <div class="container seperate elements-prod-1">
@@ -23,13 +25,14 @@
         </nav>
     </header>
     <main>
-        <div>
-            <form>
-                <input type="text" id="username-input" placeholder="Username" aria-label="Input username" required />
-                <input type="password" id='password-input' placeholder="Password" aria-label="Input password" required />
-                <button type="submit">Login</button>
-            </form>
-        </div>
+        <form class="nudge-3">
+            <div class="slate-section format-all-elements set-per-row-1 stack">
+                <input type="text" id="username-input" class="title-4" placeholder="Username" aria-label="Input username" required />
+                <input type="password" id="password-input" class="title-4" placeholder="Password" aria-label="Input password" required />
+                <button type="submit" class="info title-4" >Login</button>
+            </div>
+        </form>
     </main>
 </body>
+
 </html>
