--- a/public/test.html
+++ b/public/test.html
@@ -25,11 +25,28 @@
         </nav>
     </header>
     <main>
-        <div class="card">
-            <div class="header">
-                <h2>Title</h2>
+        <div class="card clickable hover-raise">
+            <div class="header inline seperate shaded elements-prod-horizontal-2">
+                <div class="inline">
+                    <h2>Title</h2>
+                    <div class="italics prod-right-2">by USER</div>
+                </div>
                 <div>
-                    Posted by USER on DATE
+                    Posted on DATE
+                </div>
+            </div>
+            <div class="body">
+                Card content goes here.
+            </div>
+        </div>
+        <div class="card clickable hover-raise">
+            <div class="header inline seperate shaded elements-prod-horizontal-2">
+                <div class="inline">
+                    <h2>Title</h2>
+                    <div class="italics prod-right-2">by USER</div>
+                </div>
+                <div>
+                    Posted on DATE
                 </div>
             </div>
             <div class="body">
