--- a/public/test.html
+++ b/public/test.html
@@ -28,12 +28,10 @@
         <div id="user-signed-in" class="hidden">{{signedInUser.id}}</div>
         <form id="new-post-form" class="card">
             <div class="header inline seperate shaded elements-prod-horizontal-2">
-                <div class="inline">
-                    <input id="title-input" class="heading-2" type="text" required placeholder="Enter Post Title"></input>
-                </div>
+                <input id="title-input" class="heading-2 fill" type="text" autocomplete="off" required placeholder="Enter Post Title"></input>
             </div>
             <div class="body">
-                <textarea id="content-input" rows="5" required placeholder="Enter your post content here."></textarea>
+                <textarea id="content-input" class="fill allow-resize-vertical" rows="5" required placeholder="Enter your post content here."></textarea>
             </div>
             <div class="footer button-group">
                 <button id="reset-btn" class="danger" type="reset">Clear</button>
